cmake_minimum_required(VERSION 3.0)
set(Boost_USE_STATIC_LIBS ON)
find_package(Boost 1.60 REQUIRED COMPONENTS system thread)
include_directories(${Boost_INCLUDE_DIRS})
find_package(Threads)
add_executable(unit_test test.cpp)
set_property(TARGET unit_test PROPERTY CXX_STANDARD 14)
target_link_libraries(unit_test ${CMAKE_THREAD_LIBS_INIT})
add_executable(async_http_client async_http_client.cpp)
set_property(TARGET async_http_client PROPERTY CXX_STANDARD 14)
target_link_libraries(async_http_client ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
add_executable(example example.cpp)
set_property(TARGET example PROPERTY CXX_STANDARD 14)
target_link_libraries(example ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})

